--- a/client/HTML/MachineDashboard.html
+++ b/client/HTML/MachineDashboard.html
@@ -1,3 +1,4 @@
+<!-- //MachineDashboard.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,112 +19,24 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="https://www.google.com/">About Us</a>
-              <a class="nav-link" href="https://www.google.com/">Contact</a>
+              <a class="nav-link" href="./AboutUs.html">About Us</a>
+              <a class="nav-link" href="./ContactUs.html">Contact</a>
             </div>
           </div>
         </div>
       </nav>
-       <!-- Navbar -->
-
+      
+      <!-- Banner -->
        <img src="../sources/vending-banner.jpg" alt="vendingbanner" style="width: 100%; height: 50%;">
 
-       <div id="VendingDropDowns" style="transform: translate(40%, 0%);">
-        <table class="table-striped">
-            <tr>
-                <td>
-                    <div class="container mt-4" id="MachineChoices">
-                        <div class="dropdown">
-                          <button class="btn btn-secondary btn-lg dropdown-toggle" style="background-color: red" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                            East Region
-                          </button>
-                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="#">Option 1</a></li>
-                            <li><a class="dropdown-item" href="#">Option 2</a></li>
-                            <li><a class="dropdown-item" href="#">Option 3</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Separated Link</a></li>
-                          </ul>
-                        </div>
-                      </div>
-                </td>
-                <td>
-                <div class="container mt-4" id="MachineChoices">
-                    <div class="dropdown">
-                      <button class="btn btn-secondary btn-lg dropdown-toggle" style="background-color: red;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        West Region
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" href="#">Option 1</a></li>
-                        <li><a class="dropdown-item" href="#">Option 2</a></li>
-                        <li><a class="dropdown-item" href="#">Option 3</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Separated Link</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  </td>
-            </tr>
-            <tr>
-               <td>
-                <div class="container mt-4" id="MachineChoices">
-                    <div class="dropdown">
-                      <button class="btn btn-secondary btn-lg dropdown-toggle" style="background-color: red;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        SouthEast
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" href="#">Option 1</a></li>
-                        <li><a class="dropdown-item" href="#">Option 2</a></li>
-                        <li><a class="dropdown-item" href="#">Option 3</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Separated Link</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </td>
-                    <td>
-                  <div class="container mt-4" id="MachineChoices">
-                    <div class="dropdown">
-                      <button class="btn btn-secondary btn-lg dropdown-toggle" style="background-color: red;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" >
-                        Midwest Region
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" href="#">Option 1</a></li>
-                        <li><a class="dropdown-item" href="#">Option 2</a></li>
-                        <li><a class="dropdown-item" href="#">Option 3</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Separated Link</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  </td>
-            </tr>
-            <tr>
-                <td>
-                <div class="container mt-4" id="MachineChoices">
-                    <div class="dropdown">
-                      <button class="btn btn-secondary btn-lg dropdown-toggle" style="background-color: red;" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        Southwest Region
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" href="#">Option 1</a></li>
-                        <li><a class="dropdown-item" href="#">Option 2</a></li>
-                        <li><a class="dropdown-item" href="#">Option 3</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Separated Link</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  </td>
-                  <td>Dont know what region you're in?</td>
-            </tr>
-        </table>
-       </div>
+       <!-- Vending Dropdowns -->
+       <div id="eastDropdownContainer" class="btn-group"></div>
+       <div id="westDropdownContainer" class="btn-group"></div>
+       <div id="southWestDropdownContainer" class="btn-group"></div>
+       <div id="southEastDropdownContainer" class="btn-group"></div>
+       <div id="midWestDropdownContainer" class="btn-group"></div>
 
-
-
-    <script src="../Adam JS/individual machine.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../CSS/MachineDashboard.css"></script>
-</body>
-</html>
+    <script src="../JS/MachineDashboard.js"></script>
+  </body>
+  </html>
