--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -18,9 +18,9 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">About Us</a>
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link active" aria-current="page" href="../HTML/MachineDashboard.html">Home</a>
+                  <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
+                  <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
                 </div>
               </div>
             </div>
