--- a/client/HTML/AdminInventoryDashboard.html
+++ b/client/HTML/AdminInventoryDashboard.html
@@ -10,22 +10,22 @@
 <body>
     
      <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">TTV</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="https://www.google.com/">About Us</a>
-              <a class="nav-link" href="https://www.google.com/">Contact</a>
-            </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">TTV</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="../HTML/MachineDashboard.html">Home</a>
+            <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
+            <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
           </div>
         </div>
-      </nav>
-       <!-- Navbar -->
+      </div>
+  </nav>
+       
 
 
        <div class="card" style="width: 1250px; margin: 0 auto; text-align: center; background-color: #af002a;">
