--- a/client/HTML/AdminLogin.html
+++ b/client/HTML/AdminLogin.html
@@ -10,21 +10,20 @@
 <body>
      <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">TTV</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">About Us</a>
-              <a class="nav-link" href="#">Contact</a>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">TTV</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="../HTML/MachineDashboard.html">Home</a>
+            <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
+            <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
           </div>
         </div>
-      </nav>
-       <!-- Navbar -->
+      </div>
+  </nav>
 
 
 
