--- a/client/HTML/IndividualMachine.html
+++ b/client/HTML/IndividualMachine.html
@@ -17,13 +17,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">*</span></a>
+              <a class="nav-link" href="../HTML/MachineDashboard.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
             </li>
           </ul>
         </div>
