--- a/client/HTML/IndividualMachine.html
+++ b/client/HTML/IndividualMachine.html
@@ -17,13 +17,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="./LandingPage.html">Home <span class="sr-only">*</span></a>
+              <a class="nav-link" href="../HTML/MachineDashboard.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./ContactUs.html">Contact</a>
+              <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./AboutUs.html">About Us</a>
+              <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
             </li>
           </ul>
         </div>
@@ -35,8 +35,6 @@
         </div>
       </nav>
 
-      <!-- Current Machine -->
-      <h4 class="display-machine">Southeast Region > Vending Machine A</h4>
 
       <!-- Product List -->
     <div id="app"></div>
