--- a/client/HTML/LandingPage.html
+++ b/client/HTML/LandingPage.html
@@ -28,7 +28,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Welcome to TTV</h1>
-            <a href="./Individual Machine.html" class="btn btn-danger my-2">Customer</a>
+            <a href="./MachineDashboard.html" class="btn btn-danger my-2">Customer</a>
             <a href="./AdminLogin.html" class="btn btn-secondary my-2">Manager</a>
           </p>
         </div>
