--- a/client/HTML/MachineDashboard.html
+++ b/client/HTML/MachineDashboard.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="../CSS/MachineDashboard.css" rel="stylesheet">
     <title>Vending Dashboard</title>
 </head>
 <body onload="handleOnLoad()">
@@ -18,7 +19,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./LandingPage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="./AboutUs.html">About Us</a>
               <a class="nav-link" href="./ContactUs.html">Contact</a>
             </div>
@@ -30,12 +31,30 @@
        <img src="../sources/vending-banner.jpg" alt="vendingbanner" style="width: 100%; height: 50%;">
 
        <!-- Vending Dropdowns -->
-       <div id="eastDropdownContainer" class="btn-group"></div>
-       <div id="westDropdownContainer" class="btn-group"></div>
-       <div id="southWestDropdownContainer" class="btn-group"></div>
-       <div id="southEastDropdownContainer" class="btn-group"></div>
-       <div id="midWestDropdownContainer" class="btn-group"></div>
+      <div class="region-table">
+       <table class="table">
+        <thead>
+          <th></th>
+          <th></th>
+        </thead>
+        <tbody>
+          <tr>
+            <td><div id="eastDropdownContainer" class="btn-group"></div></td>
+            <td><div id="westDropdownContainer" class="btn-group"></div></td>
+          </tr>
+          <tr>
+            <td><div id="southWestDropdownContainer" class="btn-group"></div></td>
+            <td><div id="southEastDropdownContainer" class="btn-group"></div></td>
+          </tr>
+          <tr>
+            <td><div id="midWestDropdownContainer" class="btn-group"></div></td>
+            <td><h6 class="dont-know">Don't know what region you're in?</h6></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="../JS/MachineDashboard.js"></script>
   </body>
