--- a/client/HTML/My Cart.html
+++ b/client/HTML/My Cart.html
@@ -9,27 +9,33 @@
 </head>
 <body onload="handleOnLoad()">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">TTV</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./LandingPage.html">Home</a>
-            <a class="nav-link" href="./AboutUs.html">About Us</a>
-            <a class="nav-link" href="./ContactUs.html">Contact</a>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="../HTML/MachineDashboard.html">Home <span class="sr-only">*</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../HTML/AboutUs.html">About Us</a>
+            </li>
+          </ul>
         </div>
-      </div>
-    </nav>
-     <!-- Navbar -->
+        <div class="cart-container">
+            <a class="navbar-backtomachine" href="./IndividualMachine.html">&lt Back To Vending Machine</a>
+        </div>
+      </nav>
 
       <!-- Cart Container -->
       <div id="app"></div>
       
-    <script src="../JS/my cart.js"></script>
+    <script src="../JS/mycart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
