--- a/client/HTML/LandingPage.html
+++ b/client/HTML/LandingPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <link href="../CSS/homeother.css" rel="stylesheet">
 </head>
 <body onload="handleOnLoad()">
     <!-- Navbar -->
@@ -31,7 +31,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Welcome to TTV</h1>
-            <a href="./Individual Machine.html" class="btn btn-danger my-2">Customer</a>
+            <a href="./MachineDashboard.html" class="btn btn-danger my-2">Customer</a>
             <a href="./AdminLogin.html" class="btn btn-secondary my-2">Manager</a>
           </p>
         </div>
@@ -40,7 +40,6 @@
 
 
 
-    <script src="../Adam JS/individual machine.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
