--- a/client/HTML/MachineDashboard.html
+++ b/client/HTML/MachineDashboard.html
@@ -19,7 +19,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home <span class="sr-only">*</span></a>
               <a class="nav-link" href="./AboutUs.html">About Us</a>
               <a class="nav-link" href="./ContactUs.html">Contact</a>
             </div>
