--- a/client/HTML/My Cart.html
+++ b/client/HTML/My Cart.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="../HTML/MachineDashboard.html">Home <span class="sr-only">*</span></a>
+              <a class="nav-link" href="../HTML/MachineDashboard.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../HTML/ContactUs.html">Contact</a>
