--- a/client/HTML/ContactUs.html
+++ b/client/HTML/ContactUs.html
@@ -1,16 +1,17 @@
+<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Inventory Dashboard</title>
-    <!-- Bootstrap CSS -->
+    <title>Contact Us - Admin Inventory Dashboard</title>
+    <!-- Include Bootstrap CSS if needed -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+    <link href="../CSS/homeother.css" rel="stylesheet">
+  </head>
 <body>
-    
-     <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- Navbar (if you want to keep the navigation consistent) -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">TTV</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,27 +19,30 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./LandingPage.html">Home</a>
+              <a class="nav-link" href="./MachineDashboard.html">Home</a>
               <a class="nav-link" href="./AboutUs.html">About Us</a>
-              <a class="nav-link" href="./ContactUs.html">Contact</a>
+              <a class="nav-link active" aria-current="page" href="#">Contact <span class="sr-only">*</span></a> 
             </div>
           </div>
         </div>
-      </nav>
-       <!-- Navbar -->
-       <div class="container mt-4">
-        <h1>Contact Us</h1>
+    </nav>
+   
+    <!-- Banner -->
+    <img src="../sources/vending-banner.jpg" alt="vendingbanner" style="width: 100%; height: 35%;">
+
+
+    <!-- Contact Information -->
+    <div class="container mt-4 bg-light p-4 rounded shadow">
+      <h1 id="contact-us">Contact Us</h1>
         <p>For any inquiries, please feel free to contact us using the information below:</p>
         <ul>
-            <li>Email: ajtroup1@crimson.ua.edu</li>
-            <li>Phone: 256-746-6217</li>
-            <li>Address: 410 Grace St, Tuscaloosa, AL 35401</li>
+            <li>Email: info@ttv.com</li>
+            <li>Phone: (123) 456-7890</li>
+            <li>Address: 123 Main Street, Cityville, State, 12345</li>
         </ul>
-        <!-- Add more content as needed -->
-    </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../JS/AdminInventoryDashBoard.js"></script>
-    <!-- Index JS -->
+    <!-- Include Bootstrap JS if needed -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 </body>
 </html>
